...
                    val isValid =
                        android.util.Patterns.EMAIL_ADDRESS
                            .matcher(email)
                            .matches()
                    _state.value =
                        _state.value.copy(
                            error = if (isValid) null else "Invalid email format",
                        )
                    _state.value = _state.value.copy(isValidEmail = isValid)
                } else {
                    _state.value = _state.value.copy(error = null)
                }
            }.launchIn(viewModelScope)
...
